# Nex-Lang

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Read me  SECURITY.md  VERSIONING.md  dev  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
docs/: CONTRIBUTING.md  DESIGN.md  GOVERNANCE.md  architecture.md  roadmap.md  runtime.md  security.md  spec.md  versioning.md
examples/: _sig_probe.nex  all_paths_return_fail.nex  all_paths_return_ok.nex  audit_allowed.nex  audit_denied.nex  audit_smoke.nex  bool_type_test.nex  call_arg_recovery_bad.nex  call_trailing_comma_ok.nex  cancel_bfs.nex  cancelled_in_main.nex  cancelled_ok.nex  cancelled_task_bad.nex  cap_enforce.nex  cap_fail.nex  cap_ok.nex  cap_test.nex  demo.nex  effect_call_leak_fail.nex  effect_callsite_fail.nex  effect_fail.nex  expr_group_ok.nex  expr_prec_ok.nex  fuel_spin.nex  hello.nex  known_user_call_ok.nex  let_type_bad.nex  mem_spin.nex  multi_error_fail.nex  net_effect_fail.nex  net_fail.nex  net_ok.nex  parse_recover_fail.nex  return_bad.nex  runtime_cap_guard_trigger.nex  runtime_cap_violation.nex  runtime_guard_proof.nex  see_output.nex  see_output_no_if.nex  spawn_fail.nex  (+33 more)
sandbox_data/: hello.txt
sandbox_data2/: evil.txt
scripts/: dev_ci.sh  run_v020_tests.sh
src/: ast.rs  bundle.rs  checker.rs  checker.rs.BROKEN_BACKUP  checker.rs.bak2  cli.rs  codegen.rs  codegen.rs.bak  golden.rs  ir_upgrade.rs  lexer.rs  main.rs  parser.rs  parser.rs.bak  replay.rs  tamper.rs
tests/: bundle.rs  coop_codegen_guard.rs  golden.rs  golden_security_gate.rs  rc5_decode_fuzz.rs
(+141 files in other folders)
